test/data/syntax-errors/missing-brace.ava
for each x in [1,2,3]  ava "Hello World"; };